<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="-24dp"
        android:background="#7C7C7C"
        app:layout_constraintBottom_toBottomOf="@+id/color_on_background_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_theme_title" />

    <TextView
        android:id="@+id/item_theme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/theme_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Color Primary -->
    <TextView
        android:id="@+id/color_primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:text="@string/colorprimary"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_theme_title" />

    <!-- Color On Primary -->
    <View
        android:id="@+id/color_primary_box"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/color_primary_text"
        app:layout_constraintStart_toEndOf="@+id/color_primary_text"
        app:layout_constraintTop_toTopOf="@+id/color_primary_text"
        app:layout_constraintVertical_bias="0.419" />

    <TextView
        android:id="@+id/color_on_primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/coloronprimary"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/color_primary_text" />

    <View
        android:id="@+id/color_on_primary_box"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/color_on_primary_text"
        app:layout_constraintEnd_toStartOf="@+id/color_on_primary_text"
        app:layout_constraintTop_toTopOf="@+id/color_on_primary_text" />

    <!-- Color Secondary -->
    <TextView
        android:id="@+id/color_secondary_text"
        android:layout_width="69dp"
        android:layout_height="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/colorsecondary"
        app:layout_constraintEnd_toEndOf="@+id/color_primary_text"
        app:layout_constraintTop_toBottomOf="@+id/color_on_primary_text" />

    <View
        android:id="@+id/color_secondary_box"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/colorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/color_secondary_text"
        app:layout_constraintStart_toStartOf="@+id/color_primary_box"
        app:layout_constraintTop_toTopOf="@+id/color_secondary_text" />

    <!-- Color On Secondary -->
    <TextView
        android:id="@+id/color_on_secondary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coloronsecondary"
        app:layout_constraintStart_toStartOf="@+id/color_on_primary_text"
        app:layout_constraintTop_toTopOf="@+id/color_secondary_text" />

    <!-- Color Background -->
    <View
        android:id="@+id/color_on_secondary_box"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="@+id/color_on_primary_box"
        app:layout_constraintTop_toBottomOf="@+id/color_on_primary_box" />

    <TextView
        android:id="@+id/color_background_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/colorbackground"
        app:layout_constraintEnd_toEndOf="@+id/color_secondary_text"
        app:layout_constraintTop_toBottomOf="@+id/color_secondary_text" />

    <View
        android:id="@+id/color_background_box"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/colorBackground"
        app:layout_constraintBottom_toBottomOf="@+id/color_background_text"
        app:layout_constraintStart_toStartOf="@+id/color_secondary_box"
        app:layout_constraintTop_toTopOf="@+id/color_background_text" />


    <TextView
        android:id="@+id/color_on_background_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/coloronbackground"
        app:layout_constraintStart_toStartOf="@+id/color_on_secondary_text"
        app:layout_constraintTop_toBottomOf="@+id/color_on_secondary_text" />

    <View
        android:id="@+id/color_on_background_box"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="@+id/color_background_text"
        app:layout_constraintEnd_toEndOf="@+id/color_on_secondary_box"
        app:layout_constraintTop_toTopOf="@+id/color_background_text" />


</androidx.constraintlayout.widget.ConstraintLayout>