<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    tools:context=".ui.settings.SettingsFragment">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="68dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView30">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/theme"
                    android:layout_width="match_parent"
                    android:layout_height="90sp"
                    android:visibility="visible"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view4"
                    app:layout_constraintTop_toBottomOf="@+id/create_constraintLayout"
                    app:neumorph_backgroundColor="?attr/colorPrimary"
                    app:neumorph_shadowColorDark="#000000"
                    app:neumorph_shadowColorLight="#00000000">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_16sp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/autoLanguage"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="?attr/colorPrimary"
                                android:inputType="none"
                                tools:ignore="LabelFor" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/dash"
                    android:layout_width="match_parent"
                    android:layout_height="90sp"
                    android:visibility="visible"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view4"
                    app:layout_constraintTop_toBottomOf="@+id/create_constraintLayout"
                    app:neumorph_backgroundColor="?attr/colorPrimary"
                    app:neumorph_shadowColorDark="#000000"
                    app:neumorph_shadowColorLight="#00000000">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_16sp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title_dashboard"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <ImageView
                            android:id="@+id/imageView29"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/setting"
                            android:src="@drawable/baseline_settings_24"
                            app:tint="?attr/colorOnPrimary" />

                    </LinearLayout>

                </soup.neumorphism.NeumorphCardView>


                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/update_button"
                    android:layout_width="match_parent"
                    android:layout_height="90sp"
                    android:visibility="visible"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view4"
                    app:layout_constraintTop_toBottomOf="@+id/create_constraintLayout"
                    app:neumorph_backgroundColor="?attr/colorPrimary"
                    app:neumorph_shadowColorDark="#000000"
                    app:neumorph_shadowColorLight="#00000000">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_16sp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/update"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                        <TextView
                            android:id="@+id/version_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/update"
                            android:paddingStart="8sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            tools:ignore="RtlSymmetry" />

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/setting"
                            android:src="@drawable/baseline_system_security_update_24"
                            app:tint="?attr/colorOnPrimary" />

                    </LinearLayout>

                </soup.neumorphism.NeumorphCardView>
                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="90sp"
                    android:visibility="visible"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view4"
                    app:layout_constraintTop_toBottomOf="@+id/create_constraintLayout"
                    app:neumorph_backgroundColor="?attr/colorPrimary"
                    app:neumorph_shadowColorDark="#000000"
                    app:neumorph_shadowColorLight="#00000000">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_16sp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/logout"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/logout"
                            android:src="@drawable/baseline_logout_24"
                            app:tint="?attr/colorOnPrimary" />

                    </LinearLayout>
                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/delete"
                    android:layout_width="match_parent"
                    android:layout_height="90sp"
                    android:visibility="visible"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view4"
                    app:layout_constraintTop_toBottomOf="@+id/create_constraintLayout"
                    app:neumorph_backgroundColor="?attr/colorPrimary"
                    app:neumorph_shadowColorDark="#000000"
                    app:neumorph_shadowColorLight="#00000000">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_16sp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/delete"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/delete"
                            android:src="@drawable/baseline_delete_24"
                            app:tint="?attr/colorOnPrimary" />

                    </LinearLayout>
                </soup.neumorphism.NeumorphCardView>


                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/dark_theme"
                    android:layout_width="match_parent"
                    android:layout_height="90sp"
                    android:visibility="visible"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view4"
                    app:layout_constraintTop_toBottomOf="@+id/create_constraintLayout"
                    app:neumorph_backgroundColor="?attr/colorPrimary"
                    app:neumorph_shadowColorDark="#000000"
                    app:neumorph_shadowColorLight="#00000000">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_16sp"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dark_light"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/mode_change"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="?attr/colorPrimary"
                                android:inputType="none"
                                tools:ignore="LabelFor" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:id="@+id/link"
                    android:layout_width="match_parent"
                    android:layout_height="90sp"
                    app:neumorph_shadowColorDark="#000000"
                    app:neumorph_shadowColorLight="#00000000"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view4"
                    app:layout_constraintTop_toBottomOf="@+id/create_constraintLayout"
                    app:neumorph_backgroundColor="?attr/colorPrimary">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_16sp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/abedalla_sK"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/delete"
                            android:src="@drawable/baseline_web_24"
                            app:tint="?attr/colorOnPrimary" />

                    </LinearLayout>
                </soup.neumorphism.NeumorphCardView>

            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/setting"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/Setting" />


</androidx.constraintlayout.widget.ConstraintLayout>